<resources>
    <string name="app_name">Signomo</string>
    <string name="welcomeText">Bem-vindo ao Signomo.</string>
    <string name="uppCaseAppname">SIGNOMO</string>
    <string name="login">LOGIN</string>
    <string name="inserirEmail">Insira seu e-mail</string>
    <string name="inserirSenha">Insira sua senha</string>
    <string name="combEmailSenhaInc">Combinação e-mail/senha inválida</string>
    <string name="esqueceuSenha">Esqueceu sua senha?</string>
    <string name="naoPossuiConta">Não possui conta?</string>
    <string name="inserirNome">Insira seu nome</string>
    <string name="inserirDataNasc">Sua data de nascimento</string>
    <string name="confirmeSenha">Confirme sua senha</string>
    <string name="jaPossuiConta">Já possui conta?</string>
    <string name="inscrever">INSCREVER-SE</string>
    <string name="configDataNasc">Sua data de nascimento</string>
    <string name="registerHoraNasc">Hora do seu nascimento</string>
    <string name="salvar">SALVAR</string>
    <string name="ascGen2">Ascendência em Aquario!</string>
    <string name="signoDataIntGenericos">Aquarian, 07/02/1998</string>
    <string name="outros">OUTROS</string>
    <string name="outrosHorosc">Outros Horóscopos</string>
    <string name="cliqueMaisInfo">Clique para mais informações...</string>
    <string name="dataGenerica">17</string>
    <string name="mesGenerico">Junho</string>
    <string name="frequentes">FREQUENTES</string>
    <string name="meuHoroscopo">Meu Horóscopo</string>
    <string name="description">Descrição</string>
    <string name="horoscopo">HORÓSCOPO</string>
    <string name="genericPercent2">70%</string>
    <string name="genericPercent">20%</string>
    <string name="previsoes">PREVISÕES</string>
    <string name="nomeGenerico">Harris McDaniels</string>
    <string name="signoDataGenericos">Aquarian, 07/02/1998</string>
    <string name="ascGenerica">Ascendência em Câncer!</string>
    <string name="sexo">SEXO</string>
    <string name="sexoGen1">HOMEM DE LIBRA</string>
    <string name="sexoGen2">MULHER DE LIBRA</string>
    <string name="definicao">DEFINIÇÃO</string>
    <string name="signoAquario">AQUÁRIO</string>
    <string name="signoPeixes">PEIXES</string>
    <string name="signoAries">ÁRIES</string>
    <string name="signoTouro">TOURO</string>
    <string name="signoGemeos">GÊMEOS</string>
    <string name="signoCancer">CÂNCER</string>
    <string name="signoLeao">LEÃO</string>
    <string name="signoVirgem">VIRGEM</string>
    <string name="signoLibra">LIBRA</string>
    <string name="signoEscorpiao">ESCORPIÃO</string>
    <string name="signoSagitario">SAGITÁRIO</string>
    <string name="signoCapricornio">CAPRICÓRNIO</string>
    <string name="defAriesHomem">O ariano, por exemplo, é um cara interessante, paquerador e muito agradável. Mas também é impulsivo, nunca pensa antes de agir e se entrega completamente quando está apaixonado. É daqueles que demora, mas quando se envolve faz de tudo para sempre agradar e proteger a amada.</string>
    <string name="defTouroHomem">Talvez a convivência com este signo seja um pouco complicada, pois ele é muito teimoso. Mas, ao mesmo tempo, ele possui tantas qualidades que fica fácil relevar esse defeito. É carinhoso, persistente e muito paciente. </string>
    <string name="defGemeosHomem">Os homens de Gêmeos são, acima de tudo, rápidos mentalmente, inteligentes e normalmente, cultos, pelo interesse que possuem em vários assuntos. Conversar com um homem de Gêmeos sempre é bastante agradável, especialmente se você é uma pessoa que cultiva sua mente e intelecto. Detestam a rotina e a mesmice, e por esse motivo, são chamados de "as borboletas do zodíaco", pois gostam de variar as flores. Nesse caso as flores podem ser os livros, as músicas, as pessoas e principalmente as mulheres. Homens de Gêmeos possuem um segredo que não revelam a ninguém: são um dos mais inseguros do Zodíaco, e por isso precisam testar sua capacidade de conquista a toda hora.</string>
    <string name="defCancerHomem">Ele é extremamente amoroso, sensível e está sempre disposto a fazer o possível e o impossível para quem ele gosta. Não assume de jeito nenhum quando está chateado, pois tem medo de que as pessoas saibam que seu coração é mole.</string>
    <string name="defLeaoHomem">O Homem de Leão tem a autoestima muito bem trabalhada, tem uma coisa nobre e firme. Diria que o Homem de Leão passa uma coisa firme, o foco, que é uma pessoa que se gosta, que tem o amor a si mesmo bem trabalhado.</string>
    <string name="defVirgemHomem">Os homens de Virgem são contidos e discretos. Não gostam da exposição e não costumam gostar de demonstrar suas emoções. Fechados, preferem as boas conversas a qualquer explosão de paixão. São sensatos, comedidos, tímidos e muito trabalhadores. Possuem uma certa obsessividade por organização e limpeza, e seu segredo reside exatamente na expressão dessa necessidade. Podem ser tão organizados que beiram a neurose. Mas é somente na intimidade que essa característica poderá ser conhecida. Seu armário de roupas será o mais arrumado que você já viu em sua vida. </string>
    <string name="defLibraHomem">O libriano é cativante, sociável e dotado de uma vivacidade pouco comum, ele sabe tecer os relacionamentos com harmonia. Os librianos não gostam do conflito e age sempre com moderação a fim de privilegiar seu ambiente de vida.</string>
    <string name="defEscorpiaoHomem">O homem de Escorpião é regido por Hades, o deus dos infernos, e filho do elemento água. Sensível ao extremo, o homem desse signo não é superficial, pelo contrário, é o mais profundo que encontramos no zodíaco. Não gosta de meios termos, para ele não existe amar um pouco, gostar mais ou menos. Quando ele se entrega, vai até o mais fundo do que pode viver em um relacionamento. Essa é a maior característica desse homem. Seu segredo está em seus medos, que são muitos. Como filho do deus dos infernos, ele vai até o mais fundo de si mesmo e o medo do abandono e da rejeição, passa pelo medo extremo que possui de ser traído. Ele não suporta uma traição e não vai ficar ao lado de alguém que não pode confiar. Por esse motivo, é controlador, ciumento, possessivo e manipulador.</string>
    <string name="defSagitarioHomem">Os homens de Sagitário são regidos por Júpiter e filhos do fogo e por esse motivo são exuberantes, alegres acima da média e extremamente otimistas. Costumam ser sociáveis e inteligentes, além de ambiciosos, mas um pouco desfocados de seus objetivos. Esse, na verdade, é seu maior segredo, pois sendo eles bastante ambiciosos, muitas vezes não conseguem manter seu olhar aonde desejam chegar. Amam a vida e as novidades que a vida traz e muitas vezes não conseguem fazer uma escolha decisiva para definir seu caminho, especialmente o profissional. </string>
    <string name="defCapricornioHomem">O homem de Capricórnio é regido por Saturno e filho do elemento terra. É o homem mais ambicioso do zodíaco e mais determinado também. Capricórnio nasce sabendo tudo o que deseja e, durante sua vida, ele vai delineando as maneiras de conseguir atingir suas metas que, na maioria das vezes, são voltadas ao status social. Ele quer crescer, quer dinheiro e poder, mas também quer uma mulher para acompanhá-lo e construir uma família. Ele não se apaixona com facilidade e por esse motivo, vai escolher sua companheira baseado na razão.</string>
    <string name="defAquarioHomem">Os homens de Aquário são regidos por Urano, o deus da eletricidade e da modernidade, e filhos do ar. Sua maior característica é a rapidez mental e em sua capacidade de decisões. São livres e independentes e é aí que reside seu maior segredo. Não estarão ao lado de nada e ninguém que possam impedí-lo de ser livre e de usufruir de sua independência, muitas vezes duramente conquistada. Não se entregam com facilidade e detestam manifestações emocionais intensas.</string>
    <string name="defPeixesHomem">O homem de Peixes é regido por Netuno e filhos do elemento água. É extremamente sensíveis e amam o amor, tanto amar, quanto ser amado. É terno, acolhedor, apaixonado e bastante dependente. Muito dependente mesmo, a ponto de dar a você total poder sobre tudo, e às vezes por ele mesmo. Indeciso e inseguro, o homem de Peixes não consegue nem esconder essa sua fragilidade, de tão intensa que é. Tem grande dificuldade em entender o mundo, especialmente o mundo capitalista, com sua frieza e necessidade de poder das pessoas. Podem se dar muito bem no mundo artístico, ou qualquer setor que envolva a criatividade e a sensibilidade, duas coisas que não faltam nesse homem. </string>
    <string name="defAriesMulher">A mulher de Áries pode ser do tipo que se apaixona intensamente, mas jamais colocará o amor em primeiro plano! Ela, quase sempre, está mais preocupada consigo mesma para se dedicar totalmente a alguém. Entre todas as mulheres, ela é a que consegue passar mais tempo sem um homem. Claro que viver sem um homem não quer dizer que ela vive sem sonhos ou desejos! A ariana sempre sonhará com o homem de sua vida.</string>
    <string name="defTouroMulher">A mulher de Touro costuma ser tranqüila, calma, materialista e pouco afeita a demonstrações de emotividade. Poucas são as coisas que conseguem tira-la do sério, se ela é uma típica taurina. Somente uma boa provocação é capaz de fazer aflorar aquela taurina agressiva e violenta capaz de fazer um homem se arrepender por provocá-la! E este seu limite é bem amplo, é preciso muito para fazê-la perder as estribeiras.</string>
    <string name="defGemeosMulher">Mesmo que pensem conhecer esta mulher a fundo, as opiniões dos amigos e parentes nunca serão parecidas. A geminiana equivale a várias mulheres, todas diferentes, que variam conforme seu estado de espírito. Quem conhece uma mulher de gêmeos sabe que é muito difícil ver a mesma pessoa por muito tempo. Suas fotos nunca parecem ser da mesma pessoa e suas mudanças de comportamento deixam qualquer um sem saber se acabam de conhecer uma nova mulher ou se ainda está falando com uma velha amiga! Sim, o signo de Gêmeos é o signo da mutação, de todos aqueles que gostam de mudar, experimentar e ultrapassar horizontes.</string>
    <string name="defCancerMulher">Nenhuma mulher consegue ser mais apaixonada, romântica e devotada ao parceiro do que a canceriana! Ela sempre estará presente para sufocá-lo com seus beijos apaixonados ou envolvê-lo em um abraço quente e gostoso! Carinho e atenção nunca são poucos quando se trata de agradar ao seu amor. Nos dias de frio, ela cobrirá suas pernas com um cobertor bem grosso e se deitará ao seu lado para assistirem à televisão. Quando sentir que seu companheiro está triste, fará de tudo para agradar-lhe, e não faltarão palavras de incentivo e encorajamento. Poucas são as mulheres deste signo que costumam reclamar dos maridos ou namorados.</string>
    <string name="defLeaoMulher">A mulher de Leão é muita areia para o caminhãozinho de qualquer um. Ela é uma jóia rara que não se encontra em qualquer lugar! Existe algo na mulher de Leão que pode assustar os homens: sua popularidade com o sexo masculino! Poucas são as leoninas que não vivem cercadas por muitos amigos e não possuam uma coleção de ex-namorados. Se você é do tipo de homem que detesta saber que é o vigésimo a ocupar o coração de uma mulher, desista! E nem pense em tentar controlá-la ou forçar a barra para que jogue fora as fotos dos ex-namorados. Ela é de Leão e este signo detesta ser controlado ou governado.</string>
</resources>