<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:visibility="invisible"
        android:layout_centerHorizontal="true"
        android:id="@+id/tvWrongCombination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_dark"
        android:text="@string/combEmailSenhaInc"/>
    <EditText
        android:layout_below="@+id/tvWrongCombination"
        android:id="@+id/edtLoginEmail"
        android:layout_width="262dp"
        android:layout_height="wrap_content"
        android:hint="@string/inserirEmail"
        android:drawableStart="@drawable/ic_email_24dp"
        android:drawablePadding="15dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/fontColor"
        android:textColorHint="@color/fontColor"
        android:backgroundTint="@color/fontColor"
        android:inputType="textEmailAddress" />
    <EditText
        android:id="@+id/edtLoginSenha"
        android:layout_below="@+id/edtLoginEmail"
        android:layout_width="262dp"
        android:layout_height="wrap_content"
        android:hint="@string/inserirSenha"
        android:drawableStart="@drawable/ic_vpn_key_black_24dp"
        android:drawablePadding="15dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/fontColor"
        android:textColorHint="@color/fontColor"
        android:backgroundTint="@color/fontColor"
        android:inputType="textPassword" />
    <LinearLayout
        android:layout_marginTop="20dp"
        android:id="@+id/loginLinkGroup"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/edtLoginSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/linkForgotPw"
            android:textColor="@color/fontColor"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/esqueceuSenha"/>
        <TextView
            android:id="@+id/linkDHAccount"
            android:textColor="@color/fontColor"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/naoPossuiConta"/>
    </LinearLayout>
    <Button
        android:id="@+id/btnLogin"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/loginLinkGroup"
        android:layout_width="268dp"
        android:layout_height="40dp"
        android:textColor="@color/pureWhite"
        android:background="@drawable/button_round"
        android:text="@string/login"/>
</RelativeLayout>